objects/Entitlement.object
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>P_O_No__c</fullName>
        <description>LST Historic CALP information</description>
        <label>P.O. No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>LST - CALP historic contract sales information</description>
        <label>Segment</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>LST - historic information from CALP Contract Sales opportunities</description>
        <label>Description</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>LST - CALP historic contract data</description>
        <label>Contract Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Force_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be checked by a workflow rule to fire the entitlement trigger when the Entitlement becomes Active.</description>
        <label>Force Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order_No__c</fullName>
        <description>LST - CALP historic info from Contract Sales</description>
        <label>Sales Order No</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>